# erfilter_train

./: CMakeLists.txt  README.md  build_csv_datasetNM1.py  build_csv_datasetNM2.py  char_datasetNM1.csv  char_datasetNM2.csv  extract_featuresNM1.cpp  extract_featuresNM2.cpp  train_classifierNM1.cpp  train_classifierNM2.cpp
data/char/: char_00001.tiff  char_00002.tiff  char_00003.tiff  char_00004.tiff  char_00005.tiff  char_00006.tiff  char_00007.tiff  char_00008.tiff  char_00009.tiff  char_00010.tiff  char_00011.tiff  char_00012.tiff  char_00013.tiff  char_00014.tiff  char_00015.tiff  char_00016.tiff  char_00017.tiff  char_00018.tiff  char_00019.tiff  char_00021.tiff  char_00022.tiff  char_00023.tiff  char_00024.tiff  char_00027.tiff  char_00028.tiff  char_00029.tiff  char_00030.tiff  char_00031.tiff  char_00032.tiff  char_00033.tiff  char_00034.tiff  char_00035.tiff  char_00036.tiff  char_00037.tiff  char_00038.tiff  char_00039.tiff  char_00040.tiff  char_00041.tiff  char_00042.tiff  char_00043.tiff  (+2232 more)
data/nochar/: nochar_00001.tiff  nochar_00002.tiff  nochar_00003.tiff  nochar_00004.tiff  nochar_00005.tiff  nochar_00006.tiff  nochar_00007.tiff  nochar_00008.tiff  nochar_00009.tiff  nochar_00010.tiff  nochar_00011.tiff  nochar_00012.tiff  nochar_00013.tiff  nochar_00014.tiff  nochar_00015.tiff  nochar_00016.tiff  nochar_00017.tiff  nochar_00018.tiff  nochar_00019.tiff  nochar_00020.tiff  nochar_00021.tiff  nochar_00022.tiff  nochar_00023.tiff  nochar_00024.tiff  nochar_00025.tiff  nochar_00026.tiff  nochar_00027.tiff  nochar_00028.tiff  nochar_00029.tiff  (+1656 more)
